--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag schoolscore:${{ github.head_ref }}
+      run: docker build . --file Dockerfile --tag schoolscore:latest
     
     - name: Build and push Docker images
   # You may pin to the exact commit or the version.
