--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,6 +4,7 @@
 
 tasks:
   - init: |
+      python -m pip install --upgrade pip
       pip install -r requirements.txt
-      pip install black
+      pip install black flake8 pylance
   
