--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -5,8 +5,7 @@ name: Docker
 # separate terms of service, privacy policy, and support
 # documentation.
 
-on: |
-  workflow_dispatch
+on: workflow_dispatch
   
 
 env:
