--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -29,7 +29,7 @@ jobs:
       - name: set time and necessary dependency
         run: |
           echo TODAY_DATE=$(date +%Y%m%d) >> $GITHUB_ENV
-          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
+          curl https://sh.rustup.rs -sSf | sh -s -- -y
       - name: Log in to the Container registry
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
