--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -30,6 +30,7 @@ jobs:
         run: |
           echo TODAY_DATE=$(date +%Y%m%d) >> $GITHUB_ENV
           curl https://sh.rustup.rs -sSf | sh -s -- -y
+          source "$HOME/.cargo/env"
       - name: Log in to the Container registry
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
