--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,7 @@
     "python.testing.unittestEnabled": true,
     "editor.formatOnSave": true,
     "python.formatting.provider": "black",
-    "python.linting.banditEnabled": true,
+    "python.linting.banditEnabled": false,
     "python.linting.enabled": true,
     "python.linting.pylintArgs": []
 }
