--- a/example.env
+++ b/example.env
@@ -1,5 +1,5 @@
-VERSION=
-DB_PATH=
+VERSION=<>
+DB_PATH=<>
 
 SAFE_BROWSING=<>
 TWITCH_TOKEN=<>
@@ -9,4 +9,4 @@ MAX_CHANCE=<>
 TARGET=<>
 TRUSTABLE_USER=<>
 
-PREFIX=??
+PREFIX=<>
