--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,3 +9,5 @@ services:
       - .env
     volumes:
       - "${DB_PATH}:/src/db"
+    ports:
+      - ${API_SERVER_PORT:-14785}:${API_SERVER_PORT:-14785}
