--- a/example.env
+++ b/example.env
@@ -1,13 +1,9 @@
-VERSION=<>
-DB_PATH=<>
-API_SERVER_PORT=<>
-
-SAFE_BROWSING=<>
-TWITCH_TOKEN=<>
-TWITCH_CLIENT_ID=<>
-
-MAX_CHANCE=<>
-TARGET=<>
-TRUSTABLE_USER=<>
-
-PREFIX=<>
+VERSION=
+DB_URL=
+SAFE_BROWSING=
+TWITCH_TOKEN=
+MAX_CHANCE=
+TARGET=
+TRUSTABLE_USER=
+TWITCH_CLIENT_ID=
+PREFIX=
