--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,16 @@ services:
     restart: always
     env_file:
       - .env
-    volumes:
-      - "${DB_PATH}:/src/db"
     ports:
       - ${PORT}:${PORT}
+    depends_on:
+      - mongodb
+  mongodb:
+    image: mongodb/mongodb-community-server:latest
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=user
+      - MONGO_INITDB_ROOT_PASSWORD=pass
+    volumes:
+      - type: bind
+        source: "${DB_PATH}"
+        target: /data/db
