--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,18 @@ services:
     restart: always
     env_file:
       - .env
-    volumes:
-      - "${DB_PATH}:/src/db"
     ports:
-      - ${PORT}:${PORT}
+      - ${API_SERVER_PORT:-14785}:${API_SERVER_PORT:-14785}
+    depends_on:
+      - mongodb
+  mongodb:
+    image: mongodb/mongodb-community-server:latest
+    env_file:
+      - .env
+    volumes:
+      - type: bind
+        source: ./
+        target: /data/db
+    restart: always
+    ports:
+      - "27017:27017"
